# ecodata-tracker

./: CMakeLists.txt  README.md  central_widget.cpp  central_widget.h  db_manager.cpp  db_manager.h  ecotracker.conf  entry_data.cpp  entry_data.h  main_window.cpp  main_window.h  row_data.h  settings.cpp  settings.h  tracker.cpp  tracker.h  utils.cpp  utils.h
.ecotracker/: ECODATA.db
.ecotracker/1/: configuration.conf
.ecotracker/1/category_properties/: category_3.category_properties  category_5.category_properties
.ecotracker/1/csv/: category_3_and_3_pair_correlation.csv  category_3_and_5_pair_correlation.csv  category_3_properties.csv  category_5_and_5_pair_correlation.csv  category_5_properties.csv  configuration.conf.csv
.ecotracker/1/radial_distribution/: category_3_and_3.rad  category_3_and_5.rad  category_5_and_5.rad
.ecotracker/2/: configuration.conf
.ecotracker/2/category_properties/: category_2.category_properties  category_3.category_properties  category_5.category_properties
.ecotracker/2/csv/: category_2_and_2_pair_correlation.csv  category_2_properties.csv  category_3_and_2_pair_correlation.csv  category_3_and_3_pair_correlation.csv  category_3_and_5_pair_correlation.csv  category_3_properties.csv  category_5_and_2_pair_correlation.csv  category_5_and_5_pair_correlation.csv  category_5_properties.csv  configuration.conf.csv
.ecotracker/2/radial_distribution/: category_2_and_2.rad  category_3_and_2.rad  category_3_and_3.rad  category_3_and_5.rad  category_5_and_2.rad  category_5_and_5.rad
.ecotracker/3/: configuration.conf
.ecotracker/3/category_properties/: category_3.category_properties  category_5.category_properties
.ecotracker/3/csv/: category_3_and_3_pair_correlation.csv  category_3_properties.csv  category_5_and_3_pair_correlation.csv  category_5_and_5_pair_correlation.csv  category_5_properties.csv  configuration.conf.csv
.ecotracker/3/radial_distribution/: category_3_and_3.rad  category_5_and_3.rad  category_5_and_5.rad
gui/: central_widget.cpp  central_widget.h  ecodata_entries_widget.cpp  ecodata_entries_widget.h
