cmake_minimum_required(VERSION 2.8)
project(ECODATA_TRACKER)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

# QT Imports
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(sqlite3 REQUIRED)

set(CORE_LIBS ${LIBS} ${Qt5Widgets_LIBRARIES} ${Qt5Core_LIBRARIES} ${SQLITE3_LIBRARIES})
set(GUI_LIBS ${LIBS} ${Qt5Gui_LIBRARIES})

set(CMAKE_AUTOMOC ON)

SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O2 -g -DGL_DEBUG -std=c++11 -Wno-write-strings")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2 -std=c++11 -Wno-write-strings")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -cd ../g -DGL_DEBUG -std=c++11 -Wno-write-strings")

#SET(CMAKE_BUILD_TYPE DEBUG)
#SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_BUILD_TYPE RELWITHDEBINFO)

set(CORE_SRC_FILES tracker db_manager entry_data utils settings)
set(GUI_SRC_FILES gui/main_window gui/central_widget)

SET(API_HEADER_FILES tracker.h entry_data.h)

# GUI
add_executable(EcoDataTrackerGUI ${CORE_SRC_FILES}  ${GUI_SRC_FILES})
target_link_libraries(EcoDataTrackerGUI ${CORE_LIBS} ${GUI_LIBS} )

# LIB
add_library(EcoDataTracker SHARED ${CORE_SRC_FILES})
target_link_libraries(EcoDataTracker ${CORE_LIBS} )

#INSTALL EXECUTABLE
install(TARGETS EcoDataTrackerGUI
        RUNTIME DESTINATION bin
        CONFIGURATIONS Release)

#INSTALL LIBRARY
install(TARGETS EcoDataTracker
        LIBRARY DESTINATION lib
        CONFIGURATIONS RELWITHDEBINFO)

# INSTALL HEADER FILES
install(FILES ${API_HEADER_FILES}
        DESTINATION include/ecotracker)

# SETUP CONFIGURATION FILE
SET(HOME_DIR $ENV{HOME})
set(CONFIG_FILE ecotracker.conf)
file(WRITE ${CONFIG_FILE} "home_dir=${HOME_DIR}/.ecotracker")

# INSTALL CONFIGURATION FILES
install(FILES ${CONFIG_FILE}
        DESTINATION etc/ecotracker)

# INSTAL HOME DIR
install(DIRECTORY .ecotracker
        DESTINATION ${HOME_DIR}
        FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ
        DIRECTORY_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ)
